[package]
authors = ["Dylan Frankland <github@frankland.io>"]
edition = "2018"
name = "bluster"
version = "0.2.0"
license = "MIT"
description = "A Rust crate for implementing BLE (Bluetooth Low Energy) peripherals"
homepage = "https://github.com/dfrankland/bluster"
repository = "https://github.com/dfrankland/bluster"
keywords = ["BLE", "Bluetooth", "Bluez", "CoreBluetooth", "USB"]
categories = ["os", "api-bindings", "hardware-support"]
readme = "README.md"

[dependencies]
futures = "0.3"
uuid = "1.3.4"
log = "0.4"
async-trait = "0.1.68"

[target."cfg(any(target_os = \"linux\", target_os = \"android\"))".dependencies]
dbus = "^0.9.0"
dbus-tokio = "^0.7.0"
dbus-tree = "^0.9.1"
dbus-crossroads = "0.5.2"
tokio = { version = "1.0", features = ["macros", "rt", "sync"] }

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies]
objc = "0.2.7"
objc-foundation = "0.1.1"
objc_id = "0.1.1"

[target."cfg(target_os = \"windows\")".dependencies]
windows = {version = "0.48.0", features = ["Foundation", "Storage_Streams","Devices_Radios", "Devices_Bluetooth", "Devices_Bluetooth_GenericAttributeProfile"]}
tokio = { version = "1.0", features = ["macros", "rt", "sync"] }

[dev-dependencies]
pretty_env_logger = "0.5.0"
tokio = { version = "1.0", features = ["macros", "rt", "sync"] }